--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-@import "";
+@import 'jekyll-theme-hacker';
 
-#downloads {
+section.downloads {
     visibility: hidden;
     display: none;
 }
